# nanobind_roscpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  pyproject.toml
include/: point_utils.h
launch/: test.launch
python/nanobind_roscpp/: __init__.py  point_utils_py.pyi
scripts/: build_and_install_python_bindings.sh  test.py
src/: point_utils.cpp  py_point_utils.cpp
tests/: test_point_utils.py
